
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 int EOF ;
 int SOCK_STREAM ;
 int bzero (int *,int) ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int herror (char*) ;
 int htons (int) ;
 int perror (char*) ;
 int socket (int ,int ,int ) ;

int setsock(char *host,int port)
{
 int sock;
 struct hostent *he;
 struct sockaddr_in x82_addr;

 if((he=gethostbyname(host))==((void*)0))
 {
  herror(" # gethostbyname() error");
  return(-1);
 }

 if((sock=socket(AF_INET,SOCK_STREAM,0))==EOF)
 {
  perror(" # socket() error");
  return(-1);
 }

 x82_addr.sin_family=AF_INET;
 x82_addr.sin_port=htons(port);
 x82_addr.sin_addr=*((struct in_addr *)he->h_addr);
 bzero(&(x82_addr.sin_zero),8);

 if(connect(sock,(struct sockaddr *)&x82_addr,sizeof(struct sockaddr))==EOF)
 {
  perror(" # connect() error");
  return(-1);
 }
 return(sock);
}
